# dio-desafio-api-bancaria-fastapi

./: .env.example  .gitignore  README.md  bank.db  pyproject.toml
app/: database.py  main.py
app/core/: __init__.py  config.py  dependencies.py  exceptions.py  security.py
app/models/: __init__.py  account_model.py  transaction_model.py  user_model.py
app/repositories/: account_repository.py  transaction_repository.py  user_repository.py
app/routers/: accounts.py  auth.py  transactions.py
app/schemas/: account.py  auth.py  common.py  transaction.py
app/services/: account_service.py  auth_service.py  transaction_service.py
tests/: conftest.py
tests/api/: test_accounts.py  test_auth.py  test_transactions.py
tests/integration/: test_repositories.py
tests/unit/: test_account_service.py  test_auth_service.py  test_transaction_service.py
